<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_favorite"
                android:text="@string/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_business"
                android:text="@string/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_entertainment"
                android:text="@string/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_general"
                android:text="@string/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_health"
                android:text="@string/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_science"
                android:text="@string/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_sport"
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:id="@+id/btn_technology"
                android:text="@string/technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            app:defaultQueryHint="Search"
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.SearchView>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>